--- a/site.css
+++ b/site.css
@@ -6,12 +6,18 @@
     "g h i"
     ;
     /* margin: auto; */
-    size: 70%;
+    /* size: 70%; */
     border: 2px solid black;
+  height: 410px;
+  width: 410px;
+  margin: 0 auto;
+  background-color: black;
 }
 
 .squares {
-    /* grid-area: "a"; */
+      background-color: white;
+  height: 130px;
+  width: 130px;
 }
 
 #a {
